--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,8 @@ spring.application.name=helpPortalRefugees
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgresql
+logging.level.org.springframework.security=DEBUG
+logging.level.org.project.helpportalrefugees=DEBUG
+
+
 
